# rasp_hand_draw_memo

./: .env.sample  README.md  install.sh  kiosk.sh  pyproject.toml  stop_kiosk.sh
Desktop/: drawing_app.desktop  stop_kiosk.desktop
etc/systemd/system/: drawing-app.service
slack_app/: manifest.json
src/: drawing_app.py
