[tool.poetry]
name = "rasp-hand-draw-memo"
version = "0.1.0"
description = ""
authors = ["tubone <tubo.yyyuuu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
streamlit = "^1.41.1"
streamlit-drawable-canvas = "^0.9.3"
numpy = {version = "1.23.2", python = ">=3.11,<3.12"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
