[tool.poetry]
name = "rasp-hand-draw-memo"
version = "0.1.0"
description = ""
authors = ["tubone <tubo.yyyuuu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
dash = "^2.18.2"
plotly = "^5.24.1"
numpy = "1.23.2"
pillow = "^11.1.0"
kaleido = "^0.2.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"